--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -2,3 +2,9 @@
 @import 'vars.scss';
 @import 'common.scss';
 @import 'header.scss';
+@import "swiper/scss";
+@import "swiper/scss/navigation";
+@import "swiper/scss/pagination";
+@import 'banner.scss';
+@import 'promo.scss';
+@import 'products.scss';
