--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,6 +1,7 @@
 .header{
     flex-shrink: 1;
-    padding: 24px 0 18px;
+    padding: 24px 0 8px;
+    border-bottom: 2px solid rgba(0, 0, 0, 0.15);
 
     &__logo{
         padding-right: 19px;
@@ -16,6 +17,11 @@
     &__leftside{
         display: flex;
         align-items: center;
+        
+        &_border-r {
+            padding-right: 24px;
+            border-right: 2px solid rgba(0, 0, 0, 0.15);
+        }
     }
 
     &__rightside{
