--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,10 +1,11 @@
+@import "swiper/scss";
+@import "swiper/scss/navigation";
+@import "swiper/scss/pagination";
 @import 'fonts.scss';
 @import 'vars.scss';
 @import 'common.scss';
 @import 'header.scss';
-@import "swiper/scss";
-@import "swiper/scss/navigation";
-@import "swiper/scss/pagination";
 @import 'banner.scss';
 @import 'promo.scss';
 @import 'products.scss';
+@import 'footer.scss';
