--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -67,179 +67,9 @@ body {
     height: 9px;
 }
 
-.nav-menu{
-    display: flex;
-    align-items: center;
-    padding: 0;
-    margin: 0;
-    gap: 30px;
-
-    &__item{
-        list-style: none;
-        color: $textLight;
-    }
-
-    &__link{
-        text-decoration: none;
-        color: inherit;
-        transition: ease .3s;
-
-        &:hover {
-            color: $textDark;
-        }
-    }
-}
-
-.city-select{
-    display: flex;
-    align-items: center;
-    gap: 12px;
-
-    &__visible {
-        display: flex;
-        align-items: center;
-        gap: 8px;
-        cursor: pointer;
-    }
-
-    &__field {
-        color: $textLight;
-        font-size: 16px;
-        font-weight: 500;
-        line-height: 1;
-        transition: ease .3s;
-
-        &:hover {
-            color: $textDark;
-        }
-    }
-
-    &__btn {
-        background-color: transparent;
-        border: none;
-        padding: 0;
-        transform: rotate(90deg);
-    }
-}
-
-.phone-block{
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
-
-    &__number{
-        color: inherit;
-        text-decoration: none;
-        line-height: 0.7;
-        font-size: 24px;
-        font-weight: 600;
-        transition: ease .3s;
-
-        &:hover {
-            color: $accentColor;
-        }
-    }
-
-    &__text{
-        color: $textLight;
-    }
-}
-
-.search-block{
-
-    &__control{
-        display: none;
-    }
-
-    .search-icon {
-        transition: ease .3s;
-
-        &:hover {
-            stroke: $accentColor;
-        }
-    }
-
-    &__btn {
-        padding: 0;
-        border: none;
-        background-color: transparent;
-        cursor: pointer;
-    }
-}
-
-.menu-products{
-    display: flex;
-    gap: 36px;
-
-    &__link{
-        color: inherit;
-        text-decoration: none;
-        font-size: 18px;
-        font-weight: 600;
-        line-height: 1.1;
-        transition: ease .3s;
-
-        &:hover {
-            text-decoration: underline;
-            color: $redAccent;
-        }
-    }
-}
-
-.personal-block{
-    padding: 9px 15.5px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 7px;
-    cursor: pointer;
-    transition: ease .3s;
-
-    &:hover {
-        color: $redAccent;
-
-        .cart-icon {
-            stroke: $redAccent;
-        }
-
-        .personal-icon {
-            stroke: $redAccent;
-        }
-    }
-
-    &__visual{
-        position: relative;
-    }
-
-    &__text{
-        font-size: 14px;
-        font-weight: 600;
-        line-height: 1.1;
-        display: flex;
-        align-items: center;
-
-        &_default {
-            display: none;
-            color: $textLight;
-        }
-    }
-}
-
-.cart-block{
-
-    &__summ {
-        position: absolute;
-        background: $redAccent;
-        border-radius: 22px;
-        outline: 1px solid #fff;
-        color: #fff;
-        font-size: 13px;
-        font-weight: 600;
-        line-height: 1.2;
-        padding: 2px 9px;
-        top: -1px;
-        right: -20px;
-    }
+.reset-icon {
+    width: 12px;
+    height: 13px;
 }
 
 .title {
@@ -283,6 +113,17 @@ body {
         box-shadow: 0px 4px 33px 0px rgba(255, 114, 85, 0.25);
         background-color: $redAccent;
         border: 1px solid $redAccent;
+    }
+
+    &_border {
+        color: $accentColor;
+        background-color: transparent;
+
+        &:hover {
+            box-shadow: 0px 4px 33px 0px rgba(255, 114, 85, 0.25);
+            background-color: transparent;
+            color: $redAccent;
+        }
     }
 }
 
@@ -368,7 +209,6 @@ body {
 }
 
 .logo {
-
     img {
         width: 100%;
         height: 100%;
@@ -393,5 +233,387 @@ body {
     img {
         width: 100%;
         height: 100%;
+    }
+}
+
+.nav-menu{
+    display: flex;
+    align-items: center;
+    padding: 0;
+    margin: 0;
+    gap: 30px;
+
+    &__item{
+        list-style: none;
+        color: $textLight;
+    }
+
+    &__link{
+        text-decoration: none;
+        color: inherit;
+        transition: ease .3s;
+
+        &:hover {
+            color: $textDark;
+        }
+    }
+}
+
+.city-select{
+    display: flex;
+    align-items: center;
+    gap: 12px;
+
+    &__visible {
+        display: flex;
+        align-items: center;
+        gap: 8px;
+        cursor: pointer;
+    }
+
+    &__field {
+        color: $textLight;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 1;
+        transition: ease .3s;
+
+        &:hover {
+            color: $textDark;
+        }
+    }
+
+    &__btn {
+        background-color: transparent;
+        border: none;
+        padding: 0;
+        transform: rotate(90deg);
+    }
+}
+
+.phone-block{
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+
+    &__number{
+        color: inherit;
+        text-decoration: none;
+        line-height: 0.7;
+        font-size: 24px;
+        font-weight: 600;
+        transition: ease .3s;
+
+        &:hover {
+            color: $accentColor;
+        }
+    }
+
+    &__text{
+        color: $textLight;
+    }
+}
+
+.search-block{
+    position: relative;
+
+    &__control{
+        display: flex;
+        align-items: center;
+        gap: 14px;
+        border: 1px solid rgba(0, 0, 0, 0.15);
+        border-radius: 100px;
+        background: rgb(255, 255, 255);
+        height: 44px;
+        overflow: hidden;
+        position: absolute;
+        padding: 3px;
+        right: 40px;
+        top: 50%;
+        translate: 0 -50%;
+        transition: cubic-bezier(0.25, 0.1, 1, 0.96) .3s;
+        width: 0;
+        visibility: hidden;
+        z-index: -1;
+
+        &.open {
+            visibility: visible;
+            z-index: 1;
+        }
+    }
+
+    &__button {
+        background-color: $redAccent;
+        border: 1px solid $redAccent;
+        height: 38px;
+    }
+
+    &__reset {
+        background-color: transparent;
+        border: none;
+        padding: 0;
+        cursor: pointer;
+    }
+
+    &__input {
+        border: none;
+        outline: none;
+        width: 100%;
+    }
+
+    .search-icon {
+        transition: ease .3s;
+
+        &:hover {
+            stroke: $accentColor;
+        }
+    }
+
+    &__btn {
+        padding: 0;
+        border: none;
+        background-color: transparent;
+        cursor: pointer;
+    }
+}
+
+.menu-products{
+    display: flex;
+    gap: 36px;
+
+    &__link{
+        color: inherit;
+        text-decoration: none;
+        font-size: 18px;
+        font-weight: 600;
+        line-height: 1.1;
+        transition: ease .3s;
+        display: block;
+
+        &:hover {
+            text-decoration: underline;
+            color: $redAccent;
+        }
+    }
+}
+
+.personal-block{
+    padding: 9px 15.5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 7px;
+    transition: ease .3s;
+    position: relative;
+
+    &:hover {
+        .personal-block__text {
+            color: $redAccent;
+        }
+
+        .cart-icon {
+            stroke: $redAccent;
+        }
+
+        .personal-icon {
+            stroke: $redAccent;
+        }
+    }
+
+    &__visual{
+        position: relative;
+    }
+
+    &__text{
+        font-size: 14px;
+        font-weight: 600;
+        line-height: 1.1;
+        display: flex;
+        align-items: center;
+
+        &_default {
+            display: none;
+            color: $textLight;
+        }
+    }
+
+    &__link{
+        position: absolute;
+        width: 100%;
+        height: 100%;
+    }
+}
+
+.cart-block{
+
+    &::after {
+        content: '';
+        position: absolute;
+        bottom: -23px;
+        width: 100%;
+        height: 23px;
+    }
+
+    &:hover {
+
+        .cart-popup {
+            display: block;
+        }
+    }
+
+    &__summ {
+        position: absolute;
+        background: $redAccent;
+        border-radius: 22px;
+        outline: 1px solid #fff;
+        color: #fff;
+        font-size: 13px;
+        font-weight: 600;
+        line-height: 1.2;
+        padding: 2px 9px;
+        top: -1px;
+        right: -20px;
+    }
+}
+
+.cart-popup {
+    position: absolute;
+    border-radius: 12px;
+    box-shadow: 0px 4px 33px 0px rgba(5, 76, 106, 0.15);
+    background: rgb(255, 255, 255);
+    padding: 16px 12px 16px 16px;
+    z-index: 20;
+    width: 506px;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.4;
+    top: 87px;
+    right: 0;
+    display: none;
+
+    &__content {
+        overflow: auto;
+        height: 405px;
+
+        &::-webkit-scrollbar {
+            width: 8px;
+            background-color: #D9D9D9;
+            border-radius: 12px;
+        }
+
+        &::-webkit-scrollbar-button {
+            display: none;
+        }
+
+        &::-webkit-scrollbar-thumb {
+            background-color: $accentColor;
+            border-radius: 12px;
+        }
+    }
+
+    &__top {
+        padding-right: 20px;
+    }
+
+    &__bottom {
+        font-weight: 600;
+        line-height: 1.6;
+        padding-right: 20px;
+        position: sticky;
+        bottom: 0;
+        background: #fff;
+
+        &-inner {
+            border-top: 2px solid rgba(0, 0, 0, 0.15);
+            padding: 16px 0 0;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 5px;
+        }
+    }
+
+    &__list {
+        list-style: none;
+        padding: 0 0 20px;
+        margin: 0;
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+    }
+
+    &__left {
+        color: $textDark;
+        font-size: 16px;
+    }
+
+    &__right {
+        display: flex;
+        align-items: center;
+        gap: 17px;
+    }
+
+    &__sum {
+        color: $textDark;
+        font-size: 18px;
+    }
+
+    &__button {
+        width: 140px;
+    }
+}
+
+.cart-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    &__left {
+        display: flex;
+        align-items: center;
+        gap: 12px;
+    }
+
+    &__right {
+        display: flex;
+        align-items: center;
+        gap: 14px;
+    }
+
+    &__pic {
+        box-sizing: border-box;
+        border: 1px solid rgba(0, 0, 0, 0.15);
+        border-radius: 12px;
+        width: 70px;
+        aspect-ratio: 1/1;
+        overflow: hidden;
+
+        img {
+            width: 100%;
+            height: 100%;
+        }
+    }
+
+    &__number {
+        color: $textLight;
+    }
+
+    &__name {
+        color: $textDark;
+    }
+
+    &__price {
+        line-height: 1.6;
+    }
+
+    &__reset {
+        border-radius: 4px;
+        background: rgb(245, 245, 245);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border: none;
+        padding: 8px;
+        cursor: pointer;
     }
 }
