--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -8,10 +8,38 @@
 
         .menu-products {
             gap: 26px;
+
+            @media(min-width: 1366px) and (max-width: 1450px) {
+               gap: 16px;
+            }
         }
 
         .logo-small {
             display: block;
+        }
+
+        .hide-menu{
+            @media(max-width: 1450px) {
+                width: 100%;
+                display: flex;
+                justify-content: flex-end;
+                
+            }
+        }
+
+        .header__rightside {
+            @media(max-width: 1450px) {
+                flex-grow: 1;
+            }
+            @media(max-width: 1365px) {
+                display: none;
+            }
+        }
+
+        .header__leftside_border-r {
+            @media(max-width: 1365px) {
+                border: none;
+            }
         }
     }
 
@@ -19,15 +47,29 @@
         background: rgba(255, 255, 255, 0.85);
         position: fixed;
         top: 0;
+        left: 0;
         z-index: 30;
         padding: 0 0 0 9px;
-        width: 1480px;
+        width: 100%;
+
+        @media(min-width: 1500px) {
+            max-width: 1480px;
+            left: auto;
+        }
+
+        @media(max-width: 1365px) {
+            padding: 0 9px 0 9px;
+        }
     }
 
     &__logo{
         padding-right: 19px;
         position: relative;
         margin-right: 20px;
+
+        @media(max-width: $tabletBreakPoint) {
+            display: none;
+        }
 
         &::after {
             content: "";
@@ -42,6 +84,14 @@
         &-small {
             display: none;
         }
+
+        &_mob {
+            display: none;
+
+            @media(max-width: $tabletBreakPoint) {
+                display: block;
+            }
+        }
     }
 
     &__row{
@@ -49,11 +99,18 @@
         justify-content: space-between;
         align-items: center;
         gap: 20px;
+
+        &:nth-child(2) {
+            @media(max-width: $tabletBreakPoint) {
+                display: none;
+            }
+        }
     }
 
     &__leftside{
         display: flex;
         align-items: center;
+        flex-grow: 1;
         
         &_border-r {
             padding-right: 24px;
@@ -70,6 +127,12 @@
     &__nav-menu{
         padding-left: 25px;
         position: relative;
+        flex-shrink: 0;
+        flex-grow: 1;
+    }
+
+    &__menu-content {
+        flex-grow: 1;
     }
 
     &__menu-products{
