--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -10,6 +10,7 @@
         display: flex;
         justify-content: space-between;
         padding: 24px 0;
+        flex-wrap: wrap;
     }
 
     &__menu {
