--- a/src/scss/promo.scss
+++ b/src/scss/promo.scss
@@ -1,10 +1,19 @@
 .promo {
     padding: 25px 0 35px;
 
+    &__container {
+        overflow: auto;
+    }
+
+    .container {
+        padding-right: 0;
+    }
+
     &__row {
         display: flex;
         flex-wrap: wrap;
         gap: 8px;
+        width: max-content;
     }
 
     &-card {
