--- a/src/scss/vars.scss
+++ b/src/scss/vars.scss
@@ -2,3 +2,6 @@ $textDark: #242424;
 $textLight: #999999;
 $accentColor: #35ADE1;
 $redAccent: #FF7255;
+
+$tabletBreakPoint: 1100px;
+$mobileBreakPoint: 600px;
