--- a/src/scss/vars.scss
+++ b/src/scss/vars.scss
@@ -1,7 +1,36 @@
 $textDark: #242424;
 $textLight: #999999;
 $accentColor: #35ADE1;
+$accentColorHover: #116a90;
 $redAccent: #FF7255;
 
 $tabletBreakPoint: 1100px;
 $mobileBreakPoint: 600px;
+
+@mixin dropArea {
+  border-radius: 12px;
+  box-shadow: 0px 4px 33px 0px rgba(5, 76, 106, 0.15);
+  background: rgb(255, 255, 255);
+  padding: 16px 12px 16px 16px;
+  z-index: 20;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.4;
+}
+
+@mixin scrollbar {
+  &::-webkit-scrollbar {
+    width: 8px;
+    background-color: #D9D9D9;
+    border-radius: 12px;
+  }
+
+  &::-webkit-scrollbar-button {
+    display: none;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: $accentColor;
+    border-radius: 12px;
+  }
+}
