--- a/src/scss/promo.scss
+++ b/src/scss/promo.scss
@@ -3,6 +3,8 @@
 
     &__container {
         overflow: auto;
+        padding-bottom: 10px;
+        @include scrollbar;
     }
 
     .container {
@@ -49,6 +51,7 @@
             position: absolute;
             width: 100%;
             height: 100%;
+            font-size: 0;
         }
     }
 }
