кнопки в карточке продукта для увеличения/уменьшения количества

--- a/src/scss/products.scss
+++ b/src/scss/products.scss
@@ -129,10 +129,18 @@
 
     &__button {
         width: 110px;
+
+        &.hide {
+            display: none;
+        }
     }
 
     &__count-button {
         display: none;
+
+        &.visible {
+            display: flex;
+        }
     }
 
     &:hover {
