--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -74,8 +74,8 @@ body {
 }
 
 .burger-icon {
-  width: 13.5px;
-  height: 11.5px;
+  width: 20px;
+  height: 20px;
 }
 
 .arrow-icon {
@@ -490,18 +490,26 @@ path {
   flex-grow: 1;
   gap: 36px;
 
+  @media(max-width: 1560px) {
+    gap: 26px;
+  }
+
+  @media(max-width: 1185px) {
+    gap: 16px;
+  }
+
   &__link{
     color: inherit;
     text-decoration: none;
-    font-size: clamp(1.4rem, 1vw + 1rem, 1.8rem);
+    font-size: 18px;
     font-weight: 600;
     line-height: 1.1;
     transition: ease .3s;
     display: block;
 
-    // @media(max-width: 1560px) {
-    //     font-size: 16px;
-    // }
+    @media(max-width: 1560px) {
+      font-size: 16px;
+    }
 
     &:hover {
       text-decoration: underline;
@@ -718,6 +726,7 @@ path {
   background-color: transparent;
   border: none;
   display: none;
+  padding: 0;
 }
 
 .hide-menu {
@@ -738,6 +747,10 @@ path {
 
     @media(max-width: 1350px) {
       display: none;
+    }
+
+    &.open {
+      display: flex;
     }
   }
 }
