--- a/src/scss/banner.scss
+++ b/src/scss/banner.scss
@@ -1,74 +1,99 @@
 .banner {
-    padding: 16px 0 25px;
+  padding: 16px 0 25px;
 
-    &-slider {
-        position: relative;
-        margin: 0 auto;
+  @media(max-width: $mobileBreakPoint) {
+    padding: 0 0 8px;
+  }
 
-        @media(max-width: 1560px) {
-            width: calc(100% - 54px);
-        }
+  .container {
 
-        &__swiper-slide {
-            aspect-ratio: 1480/400;
-    
-            img {
-                height: 100%;
-                width: 100%;
-                object-fit: contain;
-            }
-        }
-
-        .swiper-button {
-            position: absolute;
-            top: 50%;
-            background: transparent;
-            border: none;
-            padding: 0;
-            cursor: pointer;
-            transition: all ease .3s;
-
-            &::after {
-                display: none;
-            }
-
-            .shevron-icon {
-                height: 20px;
-            }
-
-            &_next {
-                right: -30px;
-            }
-
-            &_prev {
-                left: -30px;
-
-                .shevron-icon {
-                    transform: rotate(-180deg);
-                }
-            }
-
-            &:hover {
-                .shevron-icon {
-                    stroke: $accentColorHover;
-                }
-            }
-        }
-    
-        .swiper-pagination {
-            bottom: -20px;
-    
-            .swiper-pagination-bullet {
-                width: 12px;
-                height: 12px;
-                margin: 0 5px;
-                opacity: 0.15;
-            }
-    
-            .swiper-pagination-bullet-active {
-                background-color: $accentColor;
-                opacity: 1;
-            }
-        }
+    @media(max-width: $mobileBreakPoint) {
+      padding: 0;
     }
+  }
+
+  &-slider {
+    position: relative;
+    margin: 0 auto;
+
+    @media(min-width: 1101px) and (max-width: 1560px) {
+      width: calc(100% - 54px);
+    }
+
+    @media(max-width: $tabletBreakPoint) {
+      width: 100%;
+    }
+
+    &__swiper-slide {
+      aspect-ratio: 1480/400;
+
+      img {
+        height: 100%;
+        width: 100%;
+        object-fit: contain;
+      }
+    }
+
+    .swiper-button {
+      position: absolute;
+      top: 50%;
+      background: transparent;
+      border: none;
+      padding: 0;
+      cursor: pointer;
+      transition: all ease .3s;
+
+      @media(max-width: $tabletBreakPoint) {
+        display: none;
+      }
+
+      &::after {
+        display: none;
+      }
+
+      .shevron-icon {
+        height: 20px;
+      }
+
+      &_next {
+        right: -30px;
+      }
+
+      &_prev {
+        left: -30px;
+
+        .shevron-icon {
+          transform: rotate(-180deg);
+        }
+      }
+
+      &:hover {
+        .shevron-icon {
+          stroke: $accentColorHover;
+        }
+      }
+    }
+
+    .swiper-pagination {
+      bottom: -20px;
+
+      .swiper-pagination-bullet {
+        width: 12px;
+        height: 12px;
+        margin: 0 5px;
+        opacity: 0.15;
+
+        @media(max-width: $mobileBreakPoint) {
+          width: 8px;
+          height: 8px;
+          margin: 0 4px;
+        }
+      }
+
+      .swiper-pagination-bullet-active {
+        background-color: $accentColor;
+        opacity: 1;
+      }
+    }
+  }
 }
