--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -9,10 +9,15 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
+  min-width: 320px;
   font-family: 'Montserrat';
   font-size: 16px;
   line-height: 1;
   font-weight: 500;
+
+  &.no-scroll {
+    overflow: hidden;
+  }
 }
 
 .wrapper{
@@ -39,6 +44,7 @@ body {
   width: 16px;
   height: 20px;
   fill: none;
+  stroke: #999999;
 }
 
 .search-icon{
@@ -73,15 +79,16 @@ body {
   height: 13px;
 }
 
-.burger-icon {
-  width: 20px;
-  height: 20px;
-}
-
 .arrow-icon {
   width: 19px;
   height: 24px;
   stroke: #fff;
+}
+
+.phone-icon {
+  width: 18px;
+  height: 18px;
+  fill: $accentColor;
 }
 
 path {
@@ -103,11 +110,19 @@ path {
   &_h2 {
     font-size: 32px;
     line-height: 0.5;
+
+    @media(max-width: $mobileBreakPoint) {
+      font-size: 20px;
+    }
   }
 
   &_h3 {
     font-size: 18px;
     line-height: 1.4;
+
+    @media(max-width: $mobileBreakPoint) {
+      font-size: 14px;
+    }
   }
 }
 
@@ -160,6 +175,12 @@ path {
   text-align: center;
   padding: 0 13.5px;
 
+  @media(max-width: $mobileBreakPoint) {
+    padding: 0 25px;
+    height: 36px;
+    justify-content: space-between;
+  }
+
   &__action {
     background-color: transparent;
     padding: 0;
@@ -168,6 +189,11 @@ path {
     font-weight: 400;
     cursor: pointer;
     transition: ease .3s;
+
+    @media(max-width: $mobileBreakPoint) {
+      font-size: 17px;
+      color: $accentColor;
+    }
 
     &:hover {
       color: $redAccent;
@@ -186,6 +212,10 @@ path {
     height: 19px;
     background: transparent;
     text-align: center;
+
+    @media(max-width: $mobileBreakPoint) {
+      font-size: 17px;
+    }
   }
 }
 
@@ -238,9 +268,18 @@ path {
 .logo {
   max-width: 442px;
 
+  @media(max-width: $tabletBreakPoint) {
+    max-width: 360px;
+  }
+
+  @media(max-width: $mobileBreakPoint) {
+    max-width: 234px;
+  }
+
   img {
     width: 100%;
     height: 100%;
+    display: block;
   }
 
   &-small {
@@ -283,6 +322,11 @@ path {
     transition: ease .3s;
     font-size: clamp(1.2rem, 1vw + 1rem, 1.6rem);
 
+    @media(max-width: $tabletBreakPoint) {
+      font-size: 18px;
+      color: $textDark;
+    }
+
     &:hover {
       color: $textDark;
     }
@@ -299,6 +343,10 @@ path {
     display: flex;
     align-items: center;
     gap: 8px;
+
+    @media(max-width: $tabletBreakPoint) {
+      align-items: flex-start;
+    }
   }
 
   &__field {
@@ -311,11 +359,13 @@ path {
     font-size: clamp(1.2rem, 1vw + 1rem, 1.6rem);
     font-weight: 500;
     line-height: 1;
-    width: 93px;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    white-space: nowrap;
     transition: all ease .3s;
+
+    @media(max-width: $tabletBreakPoint) {
+      width: auto;
+      font-size: 18px;
+      color: $textDark;
+    }
 
     &:hover {
       color: $textDark;
@@ -328,10 +378,44 @@ path {
     }
   }
 
+  &__text {
+    display: block;
+    width: 93px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+
+    @media(max-width: $tabletBreakPoint) {
+      width: auto;
+    }
+
+    @media(max-width: 360px) {
+      width: 200px;
+      text-align: left;
+    }
+  }
+
+  &__sup-text {
+    display: none;
+    margin-top: 4px;
+    font-size: 12px;
+    font-weight: 500;
+    text-align: left;
+    color: $textLight;
+
+    @media(max-width: $tabletBreakPoint) {
+      display: block;
+    }
+  }
+
   &__arrow {
     rotate: 90deg;
     transition: rotate .3s;
     cursor: pointer;
+
+    @media(max-width: $tabletBreakPoint) {
+      display: none;
+    }
   }
 
   &__drop {
@@ -344,6 +428,15 @@ path {
     overflow: hidden;
     font-size: 15px;
     transition: max-height .3s cubic-bezier(1, 1, 1, 1);
+
+    @media(max-width: $mobileBreakPoint) {
+      top: 57px;
+      left: 0;
+      padding-right: 15px;
+      border-radius: 0;
+      max-width: 100%;
+      width: 100%;
+    }
   }
 
   &__list {
@@ -356,6 +449,11 @@ path {
     width: max-content;
     max-height: 300px;
     @include scrollbar;
+
+    @media(max-width: $mobileBreakPoint) {
+      width: 100%;
+      max-height: 100%;
+    }
   }
 
   &__item {
@@ -385,8 +483,25 @@ path {
 
 .phone-block{
   display: flex;
-  flex-direction: column;
-  gap: 12px;
+  gap: 8px;
+
+  &__info{
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+
+    @media(max-width: $tabletBreakPoint) {
+      gap: 4px;
+    }  
+  }
+
+  .phone-icon {
+    display: none;
+
+    @media(max-width: $tabletBreakPoint) {
+      display: initial;
+    } 
+  }
 
   &__number{
     color: inherit;
@@ -396,14 +511,22 @@ path {
     font-weight: 600;
     transition: ease .3s;
 
-      &:hover {
-        color: $accentColor;
-      }
+    @media(max-width: $tabletBreakPoint) {
+      font-size: 18px;
+    }
+
+    &:hover {
+      color: $accentColor;
+    }
   }
 
   &__text{
     color: $textLight;
     font-size: clamp(1.2rem, 1vw + 1rem, 1.6rem);
+
+    @media(max-width: $tabletBreakPoint) {
+      font-size: 12px;
+    }
   }
 }
 
@@ -723,14 +846,57 @@ path {
 }
 
 .menu-trigger {
-  background-color: transparent;
+  position: relative;
+  background-color: #000;
   border: none;
   display: none;
   padding: 0;
+  cursor: pointer;
+  transition: ease .3s;
+  width: 14px;
+  height: 2px;
+
+  &.animate {
+    background: rgba(0, 0, 0, 0);
+
+    &::before {
+      bottom: 0;
+      transform: rotate(-45deg);
+      transition: bottom 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);
+    }
+
+    &::after {
+      top: 0;
+      transform: rotate(45deg);
+      transition: top 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);
+    }
+  }
+
+  &::after, &::before {
+    content: "";
+    position: absolute;
+    left: -6px;
+    background: rgb(0, 0, 0);
+    width: 20px;
+    height: 2px;
+  }
+
+  &::before {
+    bottom: -5px;
+    transition: bottom cubic-bezier(0.23, 1, 0.32, 1), transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+  }
+
+  &::after {
+    bottom: 5px;
+    transition: top 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+  }
 }
 
 .hide-menu {
+  position: relative;
+
   @media(max-width: 1350px) {
+    width: fit-content;
     padding: 20px 0;
   }
 
@@ -744,9 +910,16 @@ path {
     display: flex;
     align-items: center;
     gap: 8px;
+    
 
     @media(max-width: 1350px) {
       display: none;
+      position: absolute;
+      right: 0;
+      top: 76px;
+      width: 200px;
+      justify-content: center;
+      @include dropArea;
     }
 
     &.open {
@@ -763,13 +936,50 @@ path {
   width: 100%;
 
   &__menu-trigger {
+
     @media(max-width: $tabletBreakPoint) {
-      display: block;
+      display: flex;
     }
   }
 
   @media(max-width: $tabletBreakPoint) {
+    position: fixed;
+    left: 0;
+    top: 63px;
     display: none;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    width: 100%;
+    height: 100vh;
+    border-radius: 0;
+    padding: 0;
+    background-color: #fff;
+    z-index: 20;
+    gap: 0;
+
+    &.open {
+      display: flex;
+    }
+  }
+
+  @media(max-width: $mobileBreakPoint) {
+    top: 43px;
+  }
+
+  .city-select {
+    @media(max-width: $tabletBreakPoint) {
+      padding: 12px 12px 8px 21px;
+      border-top: 2px solid rgba(0, 0, 0, 0.15);
+      border-bottom: 2px solid rgba(0, 0, 0, 0.15);
+      width: 100%;
+    }
+  }
+
+  .location-icon {
+    @media(max-width: $tabletBreakPoint) {
+      stroke: $accentColor;
+    }
   }
 }
 
@@ -777,7 +987,7 @@ path {
   position: fixed;
   bottom: 2vw;
   right: 3vw;
-  display: none;
+  translate: 100vw 0;
   align-items: center;
   justify-content: center;
   width: 72px;
@@ -787,6 +997,21 @@ path {
   background: $accentColor;
   cursor: pointer;
   transition: all ease .3s;
+
+  @media(max-width: $mobileBreakPoint) {
+    width: 52px;
+    height: 52px;
+    right: auto;
+    left: 50%;
+  }
+
+  &.visible {
+    translate: 0 0;
+
+    @media(max-width: $mobileBreakPoint) {
+      translate: -50% 0;
+    }
+  }
 
   &:hover {
     background: $accentColorHover;
