--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -3,6 +3,11 @@
   padding: 24px 0 8px;
   border-bottom: 2px solid rgba(0, 0, 0, 0.15);
 
+  @media(max-width: $tabletBreakPoint) {
+    padding: 12px 0;
+    border-bottom: none;
+  }
+
   &.isScroll {
     border-bottom: 2px solid transparent;
 
@@ -92,6 +97,8 @@
 
     &_mob {
       display: none;
+      margin: 0;
+      padding: 0;
 
       @media(max-width: $tabletBreakPoint) {
         display: block;
@@ -116,6 +123,13 @@
     display: flex;
     align-items: center;
     flex-grow: 1;
+
+    @media(max-width: $tabletBreakPoint) {
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 32px;
+      width: 100%;
+    }
     
     &_border-r {
       padding-right: 24px;
@@ -127,6 +141,12 @@
     display: flex;
     align-items: center;
     gap: 8px;
+
+    @media(max-width: $tabletBreakPoint) {
+      display: block;
+      width: 100%;
+      flex-grow: 1;
+    }
   }
 
   &__nav-menu{
@@ -134,6 +154,24 @@
     position: relative;
     flex-shrink: 0;
     flex-grow: 1;
+
+    @media(max-width: $tabletBreakPoint) {
+      padding-left: 0;
+      padding: 0px 10px 10px 46px;
+      flex-direction: column;
+      align-items: flex-start;
+    }
+  }
+
+  .nav-menu__item{
+
+    &:first-child {
+      display: none;
+
+      @media(max-width: $tabletBreakPoint) {
+        display: initial;
+      }
+    }
   }
 
   &__menu-content {
@@ -142,5 +180,25 @@
 
   &__menu-products{
     padding-right: 26px;
+  }
+
+  &__apps {
+    display: none;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+    padding: 32px 0 23px;
+
+    @media(max-width: $tabletBreakPoint) {
+      display: flex;
+    }
+  }
+
+  .phone-block {
+    @media(max-width: $tabletBreakPoint) {
+      padding: 12px 10px 8px 19px;
+      border-top: 2px solid rgba(0, 0, 0, 0.15);
+      border-bottom: 2px solid rgba(0, 0, 0, 0.15);
+    }
   }
 }
