--- a/src/scss/promo.scss
+++ b/src/scss/promo.scss
@@ -1,57 +1,90 @@
 .promo {
     padding: 25px 0 35px;
 
-    &__container {
-        overflow: auto;
-        padding-bottom: 10px;
-        @include scrollbar;
+    @media(max-width: $mobileBreakPoint) {
+      padding: 24px 0 12px;
     }
 
-    .container {
-        padding-right: 0;
+  &__container {
+    overflow: auto;
+    padding-bottom: 10px;
+
+    @media(max-width: $mobileBreakPoint) {
+      padding-bottom: 0;
     }
 
-    &__row {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 8px;
-        width: max-content;
+    &::-webkit-scrollbar {
+      width: 0;
+      height: 0;
+    }
+  }
+
+  .container {
+    padding-right: 0;
+  }
+
+  &__row {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
+    width: max-content;
+
+    @media(max-width: $mobileBreakPoint) {
+      gap: 4px;
+    }
+  }
+
+  &-card {
+    height: 253px;
+    overflow: hidden;
+    border-radius: 12px;
+    background: linear-gradient(180deg, rgb(255, 205, 26) 0%, rgb(255, 64, 178) 100%);
+    padding: 2px;
+    position: relative;
+
+    @media(max-width: $tabletBreakPoint) {
+      height: 200px;
     }
 
-    &-card {
-        height: 253px;
-        overflow: hidden;
-        border-radius: 12px;
-        background: linear-gradient(180deg, rgb(255, 205, 26) 0%, rgb(255, 64, 178) 100%);
-        padding: 2px;
-        position: relative;
-
-        &__bg {
-            width: 100%;
-            height: 100%;
-            background: #fff;
-            padding: 4px;
-            border-radius: 12px;
-        }
-
-        &__content {
-            height: 100%;
-            width: 100%;
-            border-radius: 12px;
-            overflow: hidden;
-
-            img {
-                width: 100%;
-                height: 100%;
-                object-fit: contain;
-            }
-        }
-
-        &__link {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            font-size: 0;
-        }
+    @media(max-width: $mobileBreakPoint) {
+      height: 135px;
+      border-radius: 10px;
     }
+
+    &__bg {
+      width: 100%;
+      height: 100%;
+      background: #fff;
+      padding: 4px;
+      border-radius: 12px;
+
+      @media(max-width: $mobileBreakPoint) {
+        border-radius: 6px;
+        padding: 1px;
+      }
+    }
+
+    &__content {
+      height: 100%;
+      width: 100%;
+      overflow: hidden;
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+      }
+    }
+
+    &__link {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      font-size: 0;
+
+      @media(max-width: $mobileBreakPoint) {
+        height: 96%;
+      }
+    }
+  }
 }
